--- a/src/views/simulation.ejs
+++ b/src/views/simulation.ejs
@@ -7,7 +7,7 @@
 			<div class="card-body">
 				<div class="row g-3">
 					<div class="col-lg-6">
-						<div class="p-3 border rounded-3 bg-body">
+						<div class="p-3 border rounded-3 bg-primary-subtle">
 							<div class="fw-semibold text-muted small text-uppercase">Custo total efetivo</div>
 							<div class="fs-5" data-simulacao-field="custo-total-efetivo">R$ 0,00</div>
 						</div>
