--- a/src/views/simulation.ejs
+++ b/src/views/simulation.ejs
@@ -1,5 +1,5 @@
-	<div class="container py-4 px-md-3 mx-auto" id="simulacao-results">
-	<div class="col-12 max-width-md-75 mx-auto mb-3">
+<div id="simulacao-results">
+	<div class="col-12 mb-4">
 		<div class="card text-bg-tertiary">
 			<div class="card-header p-3 d-flex justify-content-between align-items-center">
 				<h6 class="mb-0">Resultado da simulação</h6>
@@ -7,7 +7,7 @@
 			<div class="card-body">
 				<div class="row g-3">
 					<div class="col-lg-6">
-						<div class="p-3 border rounded-3 bg-primary-subtle">
+						<div class="p-3 border rounded-3 bg-body">
 							<div class="fw-semibold text-muted small text-uppercase">Custo total efetivo</div>
 							<div class="fs-5" data-simulacao-field="custo-total-efetivo">R$ 0,00</div>
 						</div>
@@ -54,7 +54,7 @@
 		</div>
 	</div>
 
-	<div class="col-12 max-width-md-75 mx-auto mb-4">
+	<div class="col-12 mb-4">
 		<div class="card text-bg-tertiary">
 			<div class="card-header p-3 d-flex justify-content-between align-items-center">
 				<h6 class="mb-0">Evolução de parcelas</h6>
