--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -118,12 +118,13 @@ $la-font-path: "/assets/fonts";
 
 	&.active {
 		max-height: unset;
+		overflow: visible;
 		opacity: 1;
 		pointer-events: auto;
 	}
 
 	.card-body {
-		max-height: 400px;
+		max-height: 500px;
 		overflow: auto;
 	}
 }
