--- a/src/views/header.ejs
+++ b/src/views/header.ejs
@@ -1,4 +1,4 @@
-<header class="d-flex justify-content-between align-items-center p-3 border-bottom">
+<header class="d-flex justify-content-between align-items-center p-3 border-bottom bg-body">
 	<h1 class="h4">
 		<a href="/" class="d-flex align-items-center text-decoration-none">
 			<span>Simulador de financiamento</span>
