chore: UI revamp

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -11,7 +11,7 @@
 		<%- include("./views/head/favicon.ejs") %>
 		<%- include("./views/head/seo.ejs") %>
     </head>
-    <body class="min-vh-100 d-flex flex-column bg-body-tertiary">
+    <body class="min-vh-100 d-flex flex-column bg-body-secondary">
 		<%- include("./views/header.ejs") %>
 
 		<div class="container py-4 px-md-3">
