--- a/src/views/form.ejs
+++ b/src/views/form.ejs
@@ -1,6 +1,9 @@
-<div class="card mb-4 shadow border-0">
-	<div class="card-header border-bottom-0 bg-primary-subtle p-3">
-		<h5 class="mb-0 text-primary-emphasis">Preencha os campos abaixo</h5>
+<div class="card mb-4 shadow-lg border-0">
+	<div class="card-header border-bottom-0 bg-body-tertiary p-3">
+		<div class="d-flex align-items-center gap-2">
+			<i class="las la-file-alt text-primary fs-4"></i>
+			<h5 class="mb-0 text-primary">Dados do financiamento</h5>
+		</div>
 	</div>
 
 	<div class="card-body">
@@ -201,7 +204,7 @@
 					<button
 						id="submit"
 						type="submit"
-						class="btn btn-primary flex-grow-1 flex-md-grow-0 max-width-md-25"
+						class="btn btn-primary flex-grow-1 flex-md-grow-0 px-4 shadow"
 						disabled>
 						Calcular
 					</button>
