--- a/src/views/amortizacoes-list.ejs
+++ b/src/views/amortizacoes-list.ejs
@@ -1,6 +1,6 @@
 <div class="col-12">
-	<div class="card text-bg-tertiary">
-		<div class="card-header p-3 d-flex justify-content-between align-items-center">
+	<div class="card bg-tertiary">
+		<div class="card-header p-2 d-flex justify-content-between align-items-center">
 			<h6 class="mb-0">Amortizações extraordinárias</h6>
 			<button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#amortizacao-modal">
 				<i class="las la-plus"></i> Adicionar
