--- a/src/views/rates.ejs
+++ b/src/views/rates.ejs
@@ -1,6 +1,9 @@
-<div class="card mb-4 shadow border-0" id="taxas-results">
-	<div class="card-header border-bottom-0 bg-primary-subtle p-3">
-		<h5 class="mb-0 text-primary-emphasis">Referências</h5>
+<div class="card mb-4 shadow-lg border-0" id="taxas-results">
+	<div class="card-header border-bottom-0 bg-body-tertiary p-3">
+		<div class="d-flex align-items-center gap-2">
+			<i class="las la-percentage text-primary fs-4"></i>
+			<h5 class="mb-0 text-primary">Valores referenciais</h5>
+		</div>
 	</div>
 	<div class="card-body">
 		<div class="row g-3">
