chore: Updated screenshots

--- a/src/views/head/theming.ejs
+++ b/src/views/head/theming.ejs
@@ -1,4 +1,4 @@
-<meta name="theme-color" media="(prefers-color-scheme: light)" content="#AD8B73">
+<meta name="theme-color" media="(prefers-color-scheme: light)" content="#1abc9c">
 <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#131b2c">
-<meta name="msapplication-TileColor" media="(prefers-color-scheme: light)" content="#AD8B73">
+<meta name="msapplication-TileColor" media="(prefers-color-scheme: light)" content="#1abc9c">
 <meta name="msapplication-TileColor" media="(prefers-color-scheme: dark)" content="#131b2c">
