chore: Refactor pie chart

--- a/src/views/simulation.ejs
+++ b/src/views/simulation.ejs
@@ -111,8 +111,8 @@
 	<div class="card shadow-lg border-0 mb-4">
 		<div class="card-header border-bottom-0 bg-body-tertiary p-3">
 			<div class="d-flex align-items-center gap-2">
-				<i class="las la-poll text-primary fs-4"></i>
-				<h5 class="mb-0 text-primary">Resultado da Simulação</h5>
+				<i class="las la-chart-area text-primary fs-4"></i>
+				<h5 class="mb-0 text-primary">Gráficos</h5>
 			</div>
 		</div>
 		<div class="card-body">
