--- a/src/views/modal/amortizacao.ejs
+++ b/src/views/modal/amortizacao.ejs
@@ -2,54 +2,52 @@
 	<div class="modal-dialog modal-dialog-centered modal-lg">
 		<div class="modal-content">
 			<div class="modal-header text-light bg-primary">
-				<h5 class="modal-title">Adicionar amortizacao extraordinária</h5>
+				<h5 class="modal-title">Adicionar amortização extraordinária</h5>
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body p-4">
-				<form id="form">
-					<div class="row g-3">
-						<div class="col-12">
-							<div class="input-group">
-								<span class="input-group-text">
-									<i class="las la-file-invoice-dollar fs-3"></i>
-								</span>
-								<div class="form-floating">
-									<select class="form-select" id="amortizacao-periodo" aria-label="Período" required>
-										<option value="Mensal" selected>Mensal</option>
-										<option value="Anual">Anual</option>
-										<option value="Bienal">Bienal</option>
-										<option value="Outro">Outro</option>
-									</select>
-									<label for="amortizacao-modal-periodo">Período</label>
-								</div>
+				<div class="row g-3">
+					<div class="col-12">
+						<div class="input-group">
+							<span class="input-group-text">
+								<i class="las la-file-invoice-dollar fs-3"></i>
+							</span>
+							<div class="form-floating">
+								<select class="form-select" id="amortizacao-periodo" aria-label="Período" required>
+									<option value="Mensal" selected>Mensal</option>
+									<option value="Anual">Anual</option>
+									<option value="Bienal">Bienal</option>
+									<option value="Outro">Outro</option>
+								</select>
+								<label for="amortizacao-periodo">Período</label>
 							</div>
 						</div>
-
-						<div class="col-12">
-							<div class="input-group">
-								<span class="input-group-text">&nbsp;R$</span>
-								<div class="form-floating">
-									<input type="text" class="form-control mask-money" id="amortizacao-valor" placeholder="" min="1" max="10000000" step="5000" required>
-									<label for="amortizacao-modal-valor">Valor</label>
-								</div>
-							</div>
-						</div>
-
-						<div class="col-12" id="amortizacao-intervalo-container">
-							<div class="input-group mb-1">
-								<span class="input-group-text">
-									<i class="las la-sort-numeric-down fs-3"></i>
-								</span>
-								<div class="form-floating">
-									<input type="text" class="form-control" id="amortizacao-intervalos" placeholder="" required>
-									<label for="amortizacao-modal-intervalo">Intervalo personalizado</label>
-								</div>
-							</div>
-							<small class="text-muted align-self-center ms-2">Exemplo: 1,3,5 para meses 1, 3 e 5 ou 1-5 para meses 1 a 5.</small>
-						</div>
-
 					</div>
-				</form>
+
+					<div class="col-12">
+						<div class="input-group">
+							<span class="input-group-text">&nbsp;R$</span>
+							<div class="form-floating">
+								<input type="text" class="form-control mask-money" id="amortizacao-valor" placeholder="" min="1" max="10000000" step="5000" required>
+								<label for="amortizacao-valor">Valor</label>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-12" id="amortizacao-intervalo-container">
+						<div class="input-group mb-1">
+							<span class="input-group-text">
+								<i class="las la-sort-numeric-down fs-3"></i>
+							</span>
+							<div class="form-floating">
+								<input type="text" class="form-control" id="amortizacao-intervalos" placeholder="" required>
+								<label for="amortizacao-intervalos">Intervalo personalizado</label>
+							</div>
+						</div>
+						<small class="text-muted align-self-center ms-2">Exemplo: 1,3,5 para meses 1, 3 e 5 ou 1-5 para meses 1 a 5.</small>
+					</div>
+
+				</div>
 			</div>
 			<div class="modal-footer justify-content-center">
 				<button type="button" class="btn btn-danger px-3" data-bs-dismiss="modal">Cancelar</button>
